--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -1,15 +1,13 @@
-@define-color background-color #121212;
+@define-color background-color rgba(18, 18, 18, 0.7);
+@define-color accent-color rgba(255, 255, 255, 0.125);
 @define-color text-color white;
 
-@define-color gray-900 #212121;
-@define-color gray-800 #424242;
 @define-color gray-700 #616161;
-
+@define-color steel-blue #557A9B;
 @define-color teal-800 #00695C;
 @define-color green-800 #2E7D32;
 @define-color orange-800 #EF6C00;
 @define-color red-800 #C62828;
-@define-color blue-gray-800 #37474F;
 @define-color cyan-900 #006064;
 
 * {
@@ -24,7 +22,7 @@ window#waybar {
 }
 
 tooltip {
-  background: @gray-900;
+  background: @background-color;
   border-radius: 0.5rem;
 }
 
@@ -33,43 +31,56 @@ tooltip label {
   padding: 0;
 }
 
+#workspaces {
+  background: transparent;
+}
+
 #workspaces button {
   background: transparent;
   color: @text-color;
-  border-radius: 0.5rem;
-  padding: 0.25rem;
-  padding-left: 0.35rem; /* fix off-center workspace labels */
+  min-width: 1.5rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  padding: 0 0.25rem;
 }
 
 #workspaces button.active {
-  background: @gray-800;
+  background: @accent-color;
 }
 
 #clock {
   color: @text-color;
+  background: transparent;
+  padding: 0 1rem;
+}
+
+.modules-right {
+  background: transparent;
+  padding: 0;
 }
 
 #idle_inhibitor {
   color: @text-color;
-  margin: 0 0.25rem;
+  min-width: 2.5rem;
+  margin: 0 0.25rem 0 0;
   padding: 0;
   margin-bottom: 1px; /* fix off-center icon */
   padding-right: 0.3rem; /* fix off-center icon */
-  border-radius: 0.5rem;
+  border-radius: 0 0 0.5rem 0.5rem;
   font-size: 1.5rem;
 }
 
 #idle_inhibitor.activated {
-  margin-top: 1px; /* fix off-center icon */
   margin-bottom: 0; /* fix off-center icon */
+  padding-top: 1px; /* fix off-center icon */
   background: @teal-800;
 }
 
 #battery {
   color: @text-color;
+  min-width: 1.25rem;
   margin: 0 0.25rem;
   padding: 0 0.7rem;
-  border-radius: 0.5rem;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
 
 #battery.full {
@@ -86,18 +97,19 @@ tooltip label {
 
 #wireplumber {
   color: @text-color;
+  min-width: 2.25rem;
   margin: 0 0.25rem;
-  padding: 0 0.8rem;
-  padding-right: 1.15rem; /* fix off-center icon */
-  border-radius: 0.5rem;
+  padding: 0;
+  padding-right: 0.4rem;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
 
 #wireplumber.muted {
-  background: @blue-gray-800;
+  background: @steel-blue;
 }
 
 #tray {
-  margin: 0 0.1rem;
+  margin: 0 0.5rem;
   padding: 0;
 }
 
@@ -107,8 +119,8 @@ tooltip label {
 
 #tray menu {
   border-radius: 0.5rem;
+  background: @background-color;
   background-clip: border-box;
-  background: @gray-900;
   color: @text-color;
 }
 
@@ -118,7 +130,7 @@ tooltip label {
 }
 
 #tray menu menuitem:not(disabled):hover {
-  background: @cyan-900;
+  background: @accent-color;
 }
 
 #tray menu menuitem:disabled {
